# gumbo-parser

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Doxyfile  MAINTAINING.md  Makefile.am  Makefile~  README.md  autogen.sh  configure.ac  evalxpath  genentities.sh  genperf.py  gentags.sh  meson.build  meson_options.txt  setup.py  xpath_eval.h
.woodpecker/: alpine.yaml
benchmarks/: benchmark.cc  generate_entities.py
doc/: bindings.md  building.md  contributing.md  maintaining.md  testing.md
examples/: clean_text.cc  eval_xpath.cc  find_links.cc  get_title.c  positions_of_class.cc  prettyprint.cc  serialize.cc
fuzz/: fuzz_target.cc
fuzz/corpus/: blender.org.2025.07.06.html  codeberg.org.2025.07.06.html  kernel.org.2025.07.06.html
python/gumbo/: __init__.py  gumboc.py  gumboc_tags.py  gumboc_test.py  html5lib_adapter.py  html5lib_adapter_test.py  soup_adapter.py  soup_adapter_test.py
src/: attribute.c  char_ref.c  char_ref.rl  char_ref_gperf.gperf  error.c  error.h  gumbo.h  parser.c  string_buffer.c  string_buffer.h  tag.c  tag.in  tag_enum.h  tag_gperf.h  tag_sizes.h  tag_strings.h  tokenizer.c  utf8.c  utf8.h  util.c  util.h  vector.c  vector.h  xpath.c  xpath_eval.c  xpath_eval.h
tests/: attribute.cc  char_ref.cc  main.cpp  parser.cc  string_buffer.cc  string_piece.cc  test_attribute.cc  test_parser.cc  test_test_utils.cc  test_tokenizer.cc  test_utils.cc  test_utils.h  test_vector.cc  tokenizer.cc  utf8.cc  vector.cc
tools/: print.cc
visualc/: gumbo.sln  gumbo.vcxproj
